// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LargeArrowIconNext /> default props matches the snapshot 1`] = `
<svg
  className=""
  fill="var(--color-grey-900, #222)"
  height="20"
  style={
    Object {
      "transform": "rotate(90deg)",
    }
  }
  viewBox="0 0 13 20"
  width="13"
  xmlns="http://www.w3.org/2000/svg"
>
  
  <path
    d="m6.3806 0 2.357 2.357 3.536 3.536c.651.65.651 1.706 0 2.357-.651.65-1.706.651-2.357 0l-1.869-1.869v11.952c0 .921-.746 1.667-1.667 1.667-.92 0-1.666-.746-1.666-1.667V6.381L2.8456 8.25c-.651.651-1.706.651-2.357 0-.651-.651-.651-1.707 0-2.357l3.535-3.536L6.3806 0Z"
  />
</svg>
`;

exports[`<LargeArrowIconNext /> with the prop \`direction\` set to \`down\` matches the snapshot 1`] = `
<svg
  className=""
  fill="var(--color-grey-900, #222)"
  height="20"
  style={
    Object {
      "transform": "rotate(180deg)",
    }
  }
  viewBox="0 0 13 20"
  width="13"
  xmlns="http://www.w3.org/2000/svg"
>
  
  <path
    d="m6.3806 0 2.357 2.357 3.536 3.536c.651.65.651 1.706 0 2.357-.651.65-1.706.651-2.357 0l-1.869-1.869v11.952c0 .921-.746 1.667-1.667 1.667-.92 0-1.666-.746-1.666-1.667V6.381L2.8456 8.25c-.651.651-1.706.651-2.357 0-.651-.651-.651-1.707 0-2.357l3.535-3.536L6.3806 0Z"
  />
</svg>
`;

exports[`<LargeArrowIconNext /> with the prop \`direction\` set to \`left\` matches the snapshot 1`] = `
<svg
  className=""
  fill="var(--color-grey-900, #222)"
  height="20"
  style={
    Object {
      "transform": "rotate(-90deg)",
    }
  }
  viewBox="0 0 13 20"
  width="13"
  xmlns="http://www.w3.org/2000/svg"
>
  
  <path
    d="m6.3806 0 2.357 2.357 3.536 3.536c.651.65.651 1.706 0 2.357-.651.65-1.706.651-2.357 0l-1.869-1.869v11.952c0 .921-.746 1.667-1.667 1.667-.92 0-1.666-.746-1.666-1.667V6.381L2.8456 8.25c-.651.651-1.706.651-2.357 0-.651-.651-.651-1.707 0-2.357l3.535-3.536L6.3806 0Z"
  />
</svg>
`;

exports[`<LargeArrowIconNext /> with the prop \`direction\` set to \`right\` matches the snapshot 1`] = `
<svg
  className=""
  fill="var(--color-grey-900, #222)"
  height="20"
  style={
    Object {
      "transform": "rotate(90deg)",
    }
  }
  viewBox="0 0 13 20"
  width="13"
  xmlns="http://www.w3.org/2000/svg"
>
  
  <path
    d="m6.3806 0 2.357 2.357 3.536 3.536c.651.65.651 1.706 0 2.357-.651.65-1.706.651-2.357 0l-1.869-1.869v11.952c0 .921-.746 1.667-1.667 1.667-.92 0-1.666-.746-1.666-1.667V6.381L2.8456 8.25c-.651.651-1.706.651-2.357 0-.651-.651-.651-1.707 0-2.357l3.535-3.536L6.3806 0Z"
  />
</svg>
`;
